--- a/STM32generator/STM32generator.ioc
+++ b/STM32generator/STM32generator.ioc
@@ -1,4 +1,16 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.Request0=SPI2_TX
+Dma.RequestsNb=1
+Dma.SPI2_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI2_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_TX.0.Instance=DMA1_Stream4
+Dma.SPI2_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI2_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_TX.0.Mode=DMA_NORMAL
+Dma.SPI2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI2_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Mode=I2C_Standard
@@ -6,16 +18,17 @@ I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F405RGT6
 Mcu.Family=STM32F4
-Mcu.IP0=I2C1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SPI2
-Mcu.IP5=SPI3
-Mcu.IP6=SYS
-Mcu.IP7=TIM5
-Mcu.IP8=USART1
-Mcu.IPNb=9
+Mcu.IP0=DMA
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
+Mcu.IP5=SPI2
+Mcu.IP6=SPI3
+Mcu.IP7=SYS
+Mcu.IP8=TIM5
+Mcu.IP9=USART1
+Mcu.IPNb=10
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
@@ -58,20 +71,22 @@ Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
-MxCube.Version=6.6.1
-MxDb.Version=DB.6.0.60
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+MxCube.Version=6.5.0
+MxDb.Version=DB.6.0.50
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=false
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SPI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=ENC_1
 PA0-WKUP.Locked=true
@@ -222,7 +237,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F405RGTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.27.1
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.27.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -240,7 +255,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM5_Init-TIM5-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_SPI3_Init-SPI3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_TIM5_Init-TIM5-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_DMA_Init-DMA-false-HAL-true,8-MX_SPI3_Init-SPI3-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
